[gd_scene load_steps=22 format=3 uid="uid://bq4fdjy3h30ef"]

[ext_resource type="Script" path="res://roboPuncher/robo_puncher.gd" id="1_gwm4a"]
[ext_resource type="Texture2D" uid="uid://4l7akka087pq" path="res://roboPuncher/Layer 1.png" id="1_qewco"]

[sub_resource type="AtlasTexture" id="AtlasTexture_liudc"]
atlas = ExtResource("1_qewco")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83kar"]
atlas = ExtResource("1_qewco")
region = Rect2(96, 64, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fh44"]
atlas = ExtResource("1_qewco")
region = Rect2(192, 64, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5dp3"]
atlas = ExtResource("1_qewco")
region = Rect2(288, 64, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpqbo"]
atlas = ExtResource("1_qewco")
region = Rect2(0, 96, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcr08"]
atlas = ExtResource("1_qewco")
region = Rect2(96, 96, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8opnc"]
atlas = ExtResource("1_qewco")
region = Rect2(192, 96, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gk22"]
atlas = ExtResource("1_qewco")
region = Rect2(288, 96, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhb6b"]
atlas = ExtResource("1_qewco")
region = Rect2(96, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aluhv"]
atlas = ExtResource("1_qewco")
region = Rect2(192, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0cky"]
atlas = ExtResource("1_qewco")
region = Rect2(288, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u11pm"]
atlas = ExtResource("1_qewco")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3vna"]
atlas = ExtResource("1_qewco")
region = Rect2(96, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdxm5"]
atlas = ExtResource("1_qewco")
region = Rect2(192, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7ty"]
atlas = ExtResource("1_qewco")
region = Rect2(288, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8njq"]
atlas = ExtResource("1_qewco")
region = Rect2(0, 64, 96, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qoewy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83kar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fh44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5dp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpqbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcr08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8opnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gk22")
}],
"loop": false,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhb6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aluhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0cky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0cky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aluhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhb6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u11pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3vna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u11pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdxm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8njq")
}],
"loop": false,
"name": &"Walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liudc")
}],
"loop": true,
"name": &"pj",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jpoq"]
size = Vector2(22.6667, 26.5625)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qg6pr"]
radius = 14.6667

[node name="roboPuncher" type="CharacterBody2D"]
position = Vector2(360, 240)
scale = Vector2(1.5, 1.54353)
script = ExtResource("1_gwm4a")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qoewy")
animation = &"Attack1"
frame = 3
metadata/_aseprite_wizard_config_ = {
"layer": "Layer 1",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://sprites/roboPuncher.aseprite"
}

[node name="Attack1Area" type="Area2D" parent="AnimatedSprite2d"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2d/Attack1Area"]
position = Vector2(29.3333, 1.61966)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_4jpoq")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.88719)
scale = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_qg6pr")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="animation_finished" from="AnimatedSprite2d" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
